# docs/swagger.yaml
@@ -27,14 +27,42 @@ info:
   title: web-gin
   version: v1
 paths:
-  /api/v1/tags/{id}:
+  /api/v1/tags:
     get:
+      parameters:
+      - description: 标签
+        in: body
+        name: name
+        schema:
+          type: string
+      - description: 状态
+        in: body
+        name: state
+        schema:
+          type: integer
+      - description: 页，默认1
+        in: body
+        name: pageNo
+        schema:
+          type: integer
+      - description: 页大小，默认10
+        in: body
+        name: pageSize
+        schema:
+          type: integer
+      produces:
+      - application/json
+      summary: 查询标签列表
+  /api/v1/tags/:
+    post:
       parameters:
       - description: 标签id
         in: query
         name: id
         required: true
         type: integer
+      produces:
+      - application/json
       responses:
         "200":
           description: 成功
@@ -44,5 +72,25 @@ paths:
           description: 失败
           schema:
             $ref: '#/definitions/err.Resp'
-      summary: 查询多个标签
+      summary: 创建标签
+  /api/v1/tags/{id}:
+    get:
+      parameters:
+      - description: 标签id
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/app.SOut'
+        "500":
+          description: 失败
+          schema:
+            $ref: '#/definitions/err.Resp'
+      summary: 查询标签
 swagger: "2.0"
